--- a/build.gradle
+++ b/build.gradle
@@ -14,13 +14,16 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '0.1.0'
+version = '0.1.1'
 group = 'connor135246' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'simplyhotsprings'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
 minecraft {
+	
+	//version = "1.12.2-14.23.5.2854"
+
     // The mappings can be changed at any time, and must be in the following format.
     // snapshot_YYYYMMDD   Snapshot are built nightly.
     // stable_#            Stables are built at the discretion of the MCP team.
@@ -86,13 +89,11 @@ dependencies {
 //jar {
 //    manifest {
 //        attributes([
-//            "Specification-Title": "simplyhotsprings",
-//            "Specification-Vendor": "connor135246",
-//            "Specification-Version": "0.1.0", 
-//            "Implementation-Title": project.name,
-//            "Implementation-Version": "0.1.0",
-//            "Implementation-Vendor" :"connor135246",
-//            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+//           "Project-Title": "simplyhotsprings",
+//            "Project-Author": "connor135246",
+//            "Project-Version": "0.1.1", 
+//			  "Project-MCVersion": "1.12.2-14.23.5.2854"
+//            //"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
 //        ])
 //    }
 //}
@@ -113,5 +114,24 @@ publishing {
         maven {
             url "file:///${project.projectDir}/mcmodsrepo"
         }
+    }
+}
+
+processResources
+{
+    // this will ensure that this task is redone when the versions change.
+    inputs.property "version", project.version
+
+    // replace stuff in mcmod.info, nothing else
+    from(sourceSets.main.resources.srcDirs) {
+        include 'mcmod.info'
+                
+        // replace version and mcversion
+        expand 'version':project.version
+    }
+        
+    // copy everything else, thats not the mcmod.info
+    from(sourceSets.main.resources.srcDirs) {
+        exclude 'mcmod.info'
     }
 }
