--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'maven-publish'
 // MixinGradle:
 apply plugin: 'org.spongepowered.mixin'
 
-version = '1.18.1-0.2.3-pre3'
+version = '1.18.1-0.2.4'
 group = 'connor135246.simplyhotsprings' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'simplyhotsprings'
 
